@@ -1,3 +1,4 @@
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -8,6 +9,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.openqa.selenium.By;
+import org.openqa.selenium.SearchContext;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeDriver;
@@ -21,13 +23,28 @@ class ToDoList {
     ToDoList(WebElement root) {
         this.root = root;
     }
+
+    String getTitle() {
+        return root.findElement(By.xpath("./div[@role='title']")).getText();
+    }
 }
 
 class ToDoListsPage {
     WebDriver driver;
+    SearchContext root;
 
     ToDoListsPage(WebDriver driver) {
         this.driver = driver;
+        this.root = driver;
+    }
+
+    void open(String url) {
+        driver.get(url);
+    }
+
+    List<ToDoList> getToDoLists() {
+        List<WebElement> listRoots = root.findElements(By.xpath("//div[@role='todo_list']"));
+        return listRoots.stream().map(element -> new ToDoList(element)).toList(); //.collect(Collectors.toList());
     }
 }
 
@@ -56,9 +73,10 @@ class ChromeTest {
     @Test
     @DisplayName("List with title 'Home' is present by default")
     void testDefaultListNames() {
-        driver.get("https://bwilczek.github.io/watir_pump_tutorial/todo_lists.html");
-        List<WebElement> lists = driver.findElements(By.xpath("//div[@role='todo_list']"));
-        List<String> titles = lists.stream().map(element -> element.findElement(By.xpath("./div[@role='title']")).getText()).collect(Collectors.toList());
+        ToDoListsPage page = new ToDoListsPage(driver);
+        page.open("https://bwilczek.github.io/watir_pump_tutorial/todo_lists.html");
+        List<ToDoList> todoLists = page.getToDoLists();
+        List<String> titles = todoLists.stream().map(list -> list.getTitle()).toList(); // collect(Collectors.toList());
 
         assertThat(titles).contains("Home");
     }
